# opentaion

./: .gitignore  .mcp.json  CLAUDE.md  README.md  messy.py
.claude/: settings.json
.claude/hooks/: block-dangerous-rm.sh  format-python.sh  no-api-keys.sh
_bmad-output/implementation-artifacts/: 1-1-initialize-cli-python-package.md  1-2-initialize-api-fastapi-service-with-health-check.md  1-3-initialize-web-spa-with-tailwind-and-recharts.md  1-4-supabase-schema-migrations-database-foundation.md  1-5-deploy-api-to-railway-with-auto-restart.md  1-6-deploy-web-to-vercel-and-set-up-homebrew-tap.md  2-1-api-auth-dependencies-key-validation-jwt-validation.md  2-2-api-key-crud-endpoints.md  3-3-async-usage-logging.md  (+15 more)
api/: .env.example  CLAUDE.md  Procfile  pyproject.toml  railway.toml  start.sh
api/alembic/: env.py
api/alembic/versions/: 88a7cdb79508_create_api_keys_and_usage_logs.py
api/src/opentaion_api/: __init__.py  database.py  deps.py  main.py  models.py  schemas.py
api/src/opentaion_api/routers/: __init__.py  keys.py  proxy.py  usage.py
api/src/opentaion_api/services/: cost.py  providers.py
api/tests/: conftest.py  test_cost.py  test_database_url.py  test_deps.py  test_health.py  test_keys.py  test_providers.py  test_proxy.py  test_usage.py  test_usage_logging.py
cli/: CLAUDE.md  SPEC.md  pyproject.toml
cli/src/opentaion/: __init__.py  __main__.py  agent.py  console.py  context.py  llm.py
cli/src/opentaion/commands/: __init__.py  effort.py  login.py
cli/src/opentaion/core/: __init__.py  config.py
cli/tests/: test_agent.py  test_cli.py  test_context.py  test_effort.py  test_llm.py  test_login.py
docs/: guide.md  local-deployment.md  opencode-integration.md
supabase/: config.toml
web/: .env.local.example  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+38 files in other folders)
