[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentaion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
]

[project.scripts]
opentaion = "opentaion.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opentaion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "black>=24.0",
]
