[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentaion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx",
    "python-dotenv",
]

[project.scripts]
opentaion = "opentaion.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opentaion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "hypothesis>=6.0",
]
